<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <ImageView
        android:id="@+id/iv_header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@color/placeholder"
        app:layout_constraintDimensionRatio="9:5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_image_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_header"
        app:layout_constraintDimensionRatio="w,2:3"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/iv_header">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:src="@color/placeholder"
            tools:ignore="ContentDescription,ImageContrastCheck" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_rating"
        app:layout_constraintBottom_toBottomOf="@+id/cv_image_poster"
        app:layout_constraintStart_toEndOf="@+id/cv_image_poster"
        app:layout_constraintTop_toBottomOf="@+id/iv_header"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_vote_average"
        style="@style/TvVoteAverageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_rate"
        app:layout_constraintStart_toEndOf="@+id/iv_rate"
        app:layout_constraintTop_toTopOf="@+id/iv_rate"
        tools:ignore="TextContrastCheck"
        tools:text="@string/vote_average" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/cv_image_poster"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/tv_release_date"
        style="@style/TvReleaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:text="@string/release_date" />

    <View
        android:id="@+id/lineOne"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/tv_release_date" />

    <TextView
        android:id="@+id/tv_synopsis_title"
        style="@style/TvSynopsisTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/lineOne" />

    <TextView
        android:id="@+id/tv_synopsis"
        style="@style/TvSynopsis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/tv_synopsis_title"
        tools:text="@string/synopsis" />
</androidx.constraintlayout.widget.ConstraintLayout>